code/Resource/Styles/GUI.scss
//@import "/styles/base.scss";
//@import "/styles/form.scss";

// GUI Panel
.root {
    opacity: 0;
    position: absolute;
    z-index: 100;
    background-color: rgba(0, 0, 0, 0.75);
    display: flex;
    font-size: 13px;
    opacity: 0;
    padding: 4px;
    color: white;
    position: absolute;
    z-index: 101;
    left: 0px;
    top: 0px;
    flex-direction: column;
    background-color: rgba(76,88,68,255);
    border-top: 1px solid #889180;
    border-left: 1px solid #889180;
    border-bottom: 1px solid #282e22;
    border-right: 1px solid #282e22;
    overflow:hidden;
}

.root.active {
    opacity: 1;
    pointer-events: all;
}

IconPanel {
    font-family: MaterialIcons;
}

.menupanel, .menutab {
    background-color: rgba(76,88,68,255);
    border-top: 1px solid #889180;
    border-left: 1px solid #889180;
    border-bottom: 1px solid #282e22;
    border-right: 1px solid #282e22;
}
.button {
    cursor: pointer;
    align-items: center;
    padding: 5px;
    min-width: 72px;
    height: 24px;
    border-top: 1px solid #889180;
    border-left: 1px solid #889180;
    border-bottom: 1px solid #282e22;
    border-right: 1px solid #282e22;
    &:active {
        border-top: 1px solid #282e22;
        border-left: 1px solid #282e22;
        border-bottom: 1px solid #889180;
        border-right: 1px solid #889180;
    }
}
.button.popupbutton.dropdown {
    align-items: center;
    padding: 5px;
    min-width: 72px;
    height: 24px;
    min-height: 24px;
    border-top: 1px solid #282e22;
    border-left: 1px solid #282e22;
    border-bottom: 1px solid #889180;
    border-right: 1px solid #889180;
    border-bottom: 1px solid #889180;
    border-right: 1px solid #889180;
    border-top: 1px solid #282e22;
    border-left: 1px solid #282e22;
    background-color: #3e4637;
    border-radius: 0px;
    color: white;
    .button {
    }
    &:active {
        border-top: 1px solid #282e22;
        border-left: 1px solid #282e22;
        border-bottom: 1px solid #889180;
        border-right: 1px solid #889180;
    }
}
.label {
    flex-grow: 0;
    min-width: 0px;
}
.optionstext{
    padding: 4px;
}
.dragbutton {
    height: auto;
    padding: 4px; 
    flex-grow: 1;
    border: 0;
    opacity: 0.001;
}
.closebutton {
    font-family: Webdings;
    font-size: 19px;
    min-width: 18px;
    width: 18px;
    height: 18px;
    padding:0;
    background-color: rgba(76,88,68,255);
    border-top: 1px solid #889180;
    border-left: 1px solid #889180;
    border-bottom: 1px solid #282e22;
    border-right: 1px solid #282e22;
}
.textentry {
    min-width: 48px;
    width: 48px;
    height: 24px;
    overflow: hidden;
    margin-left: 10px;
    border-bottom: 1px solid #889180;
    border-right: 1px solid #889180;
    border-top: 1px solid #282e22;
    border-left: 1px solid #282e22;
    background-color: #3e4637;
    margin-left: 0px;
    font-size: 13px;
    align-items: center;
    padding: 5px;
}
.tabcontainer {
    flex-grow: 1;
    display: flex;
    flex-direction: column;

    > .tabs {

        > .button {
            background-color: rgba(76,88,68,255);
            border-top: 1px solid #889180;
            border-left: 1px solid #889180;
            border-bottom: 1px solid #889180;
            border-right: 1px solid #282e22;
            border-radius: 0px;
            margin-right: 1px;
            height: 25px;
            min-width: 64px;
            padding: 5px;
            opacity: 1;
            top: 3px;
            &.active {
                color: #c4b550;
                top: 1px;
                z-index: 21;
                border-bottom: 0px;
                height: 27px;
            }

            &:hover {
                opacity: 1;
            }
        }
    }

    > .sheets {
        z-index: -1;
        background-color: rgba(76,88,68,255);
        border-top: 1px solid #889180;
        border-left: 1px solid #889180;
        border-bottom: 1px solid #282e22;
        border-right: 1px solid #282e22;
        display: flex;
        flex-grow: 1;
        flex-direction: column;

        > :not( .active ) {
            display: none;
        }
    }
}

.maincontent {
    overflow: hidden;
    padding: 8px;
    border: 0px;
    display: flex;
    flex-direction: column;
}

    $primary: red !default;
    $primary-alt: white !default;
    $form-control-height: 24px !default;

.checkbox {
    min-width: 24px;
    height: 16px;
    margin-bottom: 6px;
    cursor: pointer;

    .checkpanel, iconpanel {
        flex-shrink: 0;
        width: 15px;
        height: 15px;
        border: 1px solid rgba(103,100,88,255);
        border-radius: 1px; 
        margin-right: 8px;
        color: white;

        .checklabel {
            transform: translate(-3 -5);
            font-family: Webdings;
            font-size: 22px;
        }
    }

    .label {
        margin-right: 10px;
        color: #cfd6ca;
    }

    > .checkmark {
        padding: 1px;
        font-size: 14px;
        //border: 3px solid $primary;
        border-radius: 2px;
        text-align: center;
        justify-content: center;
        align-items: center;
        color: transparent;
        min-height: 15px;
        margin-right: 10px;
        pointer-events: none;
        cursor: pointer;
    }

    &.checked {

        .label {
            margin-right: 10px;
            color: #c4b550;
        }

        > .checkpanel, .iconpanel {
            .checklabel {
                font-family: Webdings;
                font-size: 22px;
                color: #cfd6ca;
            }
        }

        > .checkmark {
            //color: $primary-alt;
            color: white;
            background-color: transparent;
        }
    }

    &:active {
        color: gray;
        transform: scale(1);
    }

    &:hover {
    }
}

.slider {
    flex-grow: 1;
    cursor: pointer;
    height: 16px;
    align-items: center;
    padding-right: 16px;
    margin: 0;
    margin-bottom: 16px;

    > .thumb {
        z-index: 1;
        background-color: rgba(76,88,68,255);
        border-top: 1px solid #889180;
        border-left: 1px solid #889180;
        border-bottom: 1px solid #282e22;
        border-right: 1px solid #282e22;
        position: absolute;
        width: 8px;
        height: 16px;
        border-radius: 0px;
        box-shadow: 0px 0px 0px black;
        transition: all 0s ease-out;

        &:hover {
            background-color: rgba(76,88,68,255);
        }
    }

    &:active {
        > .thumb {
            background-color: rgba(76,88,68,255);
        }
    }

    > .scalestepmin {
        position: absolute;
        z-index: -1;
        flex-grow: 1;
        top: 19px;
        justify-content: flex-start;
        color: #889180;
        font-size: 9px;
    }

    > .scalestepmax {
        position: absolute;
        z-index: -1;
        flex-grow: 1;
        top: 19px;
        right: 8px;
        text-align: right;
        font-size: 9px;
        color: #889180;
    }

    > .scalesteps {
        z-index: -1;
        flex-grow: 1;
        top: 11px;
        left: 4px;
        height: 10px;
        justify-content: space-between;

        > .step {
            background-color: #7f8c7f;
            width: 1px;
            height: 5px;
        }
    }

    > .track {
        position: absolute;
        left: 0px;
        right: 16px;
        height: 4px;
        background-color: rgb(31, 31, 31);
        border-radius: 0px;
        border-bottom: 1px solid #889180;
        border-right: 1px solid #889180;
        border-top: 1px solid #282e22;
        border-left: 1px solid #282e22;

        > .inner {
            border-radius: 0px;
            background-color: rgb(31, 31, 31);
            width: 50px;
            height: 0px;
            transition: all 0.2s ease-out;
        }
    }
}


.sliderentry {
    > .slider {
        flex-grow: 1;
        flex-shrink: 0;
    }

    > .textentry:not( .one.two ) {
        align-items: center;
        padding: 5px;
        max-width: 48px;
        min-width: 48px;
        width: 48px;
        height: 24px;
        overflow: hidden;
        margin-left: 10px;
        border-bottom: 1px solid #889180;
        border-right: 1px solid #889180;
        border-top: 1px solid #282e22;
        border-left: 1px solid #282e22;
        background-color: #3e4637;
        margin-left: 0px;
        font-size: 13px;
        color: $primary-alt;
    }
}

    .slider2d {
        flex-grow: 1;
        cursor: pointer;
        min-height: 16px;
        align-items: center;
        padding-right: 16px;
        height: 200px;
        background-color: red;

        > .thumb {
            position: absolute;
            width: 12px;
            height: 12px;
            border-radius: 1000px;
            transition: all 0.2s ease-out;
            transform: translateX( -50% ) translateY( -50% );
            border: 2px solid rgba( white, 1 );

            &:hover {
            }
        }

        &:active {
            > .thumb {
                width: 40px;
                height: 40px;
            }
        }
    }

